source/nodejs/adaptivecards-designer/css/card-designer.css
/*
    Icons
*/
.acd-icon {
    font-family: 'FabricMDL2Icons';
    font-size: 14px;
    font-style: normal;
    font-weight: normal;
}

.acd-icon-bolt::before {
    content: "\E945";
}

.acd-icon-addColumn::before {
    content: "\F1D6";
}

.acd-icon-remove::before {
    content: "\E711";
}

.acd-icon-drag::before {
    content: "\E7C2";
}

.acd-icon-image::before {
    content: "\ECAB";
}

.acd-icon-adaptiveCard::before {
    content: "\EEBD";
}

.acd-icon-column::before {
    content: "\E799";
}

.acd-icon-columnSet::before {
    content: "\F1D5";
}

.acd-icon-container::before {
    content: "\E739";
}

.acd-icon-factSet::before {
    content: "\F2A2";
}

.acd-icon-image::before {
    content: "\EB9F";
}

.acd-icon-imageSet::before {
    content: "\E7AA";
}

.acd-icon-inputChoiceSet::before {
    content: "\F2C7";
}

.acd-icon-inputDate::before {
    content: "\E787";
}

.acd-icon-inputNumber::before {
    content: "\EDC4";
}

.acd-icon-inputText::before {
    content: "\EDC3";
}

.acd-icon-inputTime::before {
    content: "\E917";
}

.acd-icon-inputToggle::before {
    content: "\E73A";
}

.acd-icon-textBlock::before {
    content: "\E8E9";
}

.acd-icon-chevronDown::before {
    content: "\E70D";
}

.acd-icon-chevronUp::before {
    content: "\E70E";
}

.acd-icon-chevronRight::before {
    content: "\E76C";
}

.acd-icon-chevronLeft::before {
    content: "\E76B";
}

.acd-icon-newCard::before {
    content: "\F321";
}

.acd-icon-fullScreen::before {
    content: "\E740";
}

.acd-icon-actionShowCard::before {
    content: "\EEBD";
}

.acd-icon-actionOpenUrl::before {
    content: "\E71B";
}

.acd-icon-actionSubmit::before {
    content: "\E73E";
}

.acd-icon-actionToggleVisibility::before {
    content: "\E7B3";
}

.acd-icon-actionHttp::before {
    content: "\E774";
}

.acd-icon-copy::before {
    content: "\E8C8";
}

.acd-icon-header-expanded::before {
    content: "\F166";
}

.acd-icon-header-collapsed::before {
    content: "\F164";
}

/*
    Miscellaneous
*/

.acd-designersurface {
    outline: none;
}

/*
    Side panes
*/
.acd-verticalCollapsedTabContainer {
    max-width: 32px;
    overflow-x: hidden;
}

.acd-sidePane-header {
    height: 32px;
    background-color: #EEEEEE;
    cursor: default;
}

.acd-sidePane-header.rotated90DegreesClockwise {
    width: 32px;
    height: 170px;
    border-bottom: 1px solid #D2D2D2;
}

.acd-sidePane-header.rotated90DegreesCounterClockwise {
    width: 32px;
    height: 170px;
    border-bottom: 1px solid #D2D2D2;
}

.acd-sidePane-header-content {
    height: 100%;
    padding: 4px 10px;
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.acd-sidePane-header-content.rotated90DegreesClockwise {
    width: 170px;
    height: 32px;
    transform-origin: 0 100%;
    transform: rotate(90deg) translate(-32px, 0px);
}

.acd-sidePane-header-content.rotated90DegreesCounterClockwise {
    width: 170px;
    height: 32px;
    transform-origin: 0 0;
    transform: rotate(-90deg) translate(-170px, 0px);
}

.acd-sidePane-header-title {
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
}

.acd-sidePane-header-expandCollapseButton {
    display: flex;
    align-items: center;
    cursor: pointer;
    margin-left: 4px;
}

.acd-sidePane-header-status {
    margin-left: 4px;
}

.acd-designersurface.dragging {
    cursor: move;
}

.acd-designersurface.dragging > .acd-peer:hover {
    background-color: transparent;
    border-color: transparent;
}

/*
    Designer peers
*/

.acd-peer {
    border: 1px solid transparent;
}

.acd-peer:hover {
    border: 1px solid blue;
}

.acd-peer.selected {
    border: solid 1px red;
}

.acd-peer.dragover {
    border: 1px dashed green !important;
}

.acd-peer.dragover:hover {
    background-color: none;
}

.acd-peer.dragging:hover {
    border: 1px solid green;
}

.acd-peerButton {
    width: 20px;
    height: 20px;
    font-family: 'FabricMDL2Icons';
    font-size: 14px;
    font-weight: bold;
    font-style: normal;
    font-weight: normal;
    display: flex;
    align-items: center;
    justify-content: center;
    border: 1px solid red;
    color: red;
    background-color: white;
    cursor: default;
    user-select: none;
}

.acd-peerButton:hover {
    background-color: red;
    color: white;
}

/*
    Tool box
*/

.acd-palette-category {
    align-items: center;
    color: #4a4a4a;
    display: flex;
    font-size: 14px;
    font-weight: 600;
    list-style-type: none;
    position: relative;
    white-space: nowrap;
    padding: 4px 16px 4px 16px;
    cursor: default;
}

.acd-palette-category::after {
    border-bottom: 1px solid #e0e0e0;
    content: "";
    margin-bottom: -3px;
    margin-left: 8px;
    width: 100%;
}

.acd-palette-item {
    cursor: move;
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 4px 16px 4px 16px;
}

.acd-palette-item-label {
    font-size: 14px;
    white-space: nowrap;
    margin-left: 8px;
    flex: 1 1 100%;
}

.acd-palette-item:hover {
    background-color: #EEEEEE;
}

/*
    Visual tree view
*/

.acd-tree-item {
    cursor: pointer;
}

.acd-tree-item.selected {
    background-color: #BCE2FF;
}

.acd-tree-item:hover {
    background-color: #EEEEEE;
}

.acd-tree-item.selected:hover {
    background-color: #A3D8FF;
}

.acd-tree-item-expandCollapseButton {
    font-family: 'FabricMDL2Icons';
    font-size: 10px;
}

.acd-tree-item-text {
    user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    -webkit-user-select: none;
    padding: 4px 4px 4px 8px;
}

.acd-tree-item-typeName {
    margin-left: 8px;
}

.acd-tree-item-additionalText {
    color: gray;
    margin-left: 8px;
}

/*
    Toolbar
*/

.acd-toolbar-button {
    padding: 11px;
    border: 1px solid transparent;
    font-style: normal;
    font-weight: normal;
    display: flex;
    align-items: center;
    justify-content: center;
    cursor: default;
    user-select: none;
}

.acd-toolbar-button:before {
    font-family: 'FabricMDL2Icons';
    font-size: 20px;
    margin-right: 6px;
}

.acd-toolbar-button:hover {
    background-color: white;
}

.acd-toolbar-button:active {
    border: 1px solid black;
}

